--- a/app/staticwebapp.config.json
+++ b/app/staticwebapp.config.json
@@ -82,5 +82,16 @@
   },
   "mimeTypes": {
     ".json": "text/json"
+  },
+  {
+  "auth": {
+    "azureActiveDirectory": {
+      "registration": {
+        "openIdIssuer": "https://login.microsoftonline.com/72f988bf-86f1-41af-91ab-2d7cd011db47",
+        "clientIdSettingName": "AAD_CLIENT_ID,
+        "clientSecretSettingName": "AAD_CLIENT_SECRET"
+      }
+    }
   }
+}
 }
