--- a/app/staticwebapp.config.json
+++ b/app/staticwebapp.config.json
@@ -37,14 +37,6 @@
       "allowedRoles": ["administrator", "customers_contoso"]
     },
     {
-      "route": "/login",
-      "rewrite": "/.auth/login/google"
-    },
-    {
-      "route": "/.auth/login/twitter",
-      "statusCode": 404
-    },
-    {
       "route": "/logout",
       "redirect": "/.auth/logout"
     },
@@ -88,8 +80,7 @@
       "registration": {
         "openIdIssuer": "https://login.microsoftonline.com/72f988bf-86f1-41af-91ab-2d7cd011db47",
         "clientIdSettingName": "AAD_CLIENT_ID",
-        "clientSecretSettingName": "AAD_CLIENT_SECRET",
-		"userDetailsClaim": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name"
+        "clientSecretSettingName": "AAD_CLIENT_SECRET"
       }
     }
   }
