added identityproviders element

--- a/app/staticwebapp.config.json
+++ b/app/staticwebapp.config.json
@@ -76,12 +76,14 @@
     ".json": "text/json"
   },
   "auth": {
-    "azureActiveDirectory": {
-      "registration": {
-        "openIdIssuer": "https://login.microsoftonline.com/72f988bf-86f1-41af-91ab-2d7cd011db47",
-        "clientIdSettingName": "AAD_CLIENT_ID",
-        "clientSecretSettingName": "AAD_CLIENT_SECRET"
-      }
-    }
+    "identityProviders": {
+      "azureActiveDirectory": {
+        "registration": {
+          "openIdIssuer": "https://login.microsoftonline.com/72f988bf-86f1-41af-91ab-2d7cd011db47",
+		  "clientIdSettingName": "AAD_CLIENT_ID",
+			"clientSecretSettingName": "AAD_CLIENT_SECRET"
+		}
+	  }
+	}
   }
 }
