--- a/app/staticwebapp.config.json
+++ b/app/staticwebapp.config.json
@@ -81,8 +81,13 @@
         "registration": {
           "openIdIssuer": "https://login.microsoftonline.com/72f988bf-86f1-41af-91ab-2d7cd011db47",
 		  "clientIdSettingName": "AAD_CLIENT_ID",
-			"clientSecretSettingName": "AAD_CLIENT_SECRET",
-			"userDetailsClaim": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name"
+		  "clientSecretSettingName": "AAD_CLIENT_SECRET"
+		}
+	  },
+	  "google": {
+        "registration": {
+		  "clientIdSettingName": "Google_CLIENT_ID",
+		  "clientSecretSettingName": "Google_CLIENT_SECRET"
 		}
 	  }
 	}
