added response override

--- a/app/staticwebapp.config.json
+++ b/app/staticwebapp.config.json
@@ -71,5 +71,10 @@
 	    "userDetailsClaim": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name"
 	  }
 	}
+  },
+  "responseOverrides": {
+  "401": {
+	"redirect": "/.auth/login/aad",
+	"statusCode": 302
   }
 }
