--- a/app/staticwebapp.config.json
+++ b/app/staticwebapp.config.json
@@ -1,65 +1,10 @@
 {
   "routes": [
     {
-      "route": "/profile",
-      "allowedRoles": ["authenticated"]
-    },
-	{
-      "route": "/products",
-      "allowedRoles": ["authenticated"]
-    },
-    {
-      "route": "/admin/*",
-      "allowedRoles": ["administrator"]
-    },
-    {
-      "route": "/images/*",
-      "headers": {
-        "cache-control": "must-revalidate, max-age=15770000"
-      }
-    },
-    {
-      "route": "/api/*",
-      "methods": ["GET"],
-      "allowedRoles": ["registeredusers"]
-    },
-    {
-      "route": "/api/*",
-      "methods": ["PUT", "POST", "PATCH", "DELETE"],
-      "allowedRoles": ["administrator"]
-    },
-    {
-      "route": "/api/*",
-      "allowedRoles": ["authenticated"]
-    },
-    {
-      "route": "/customers/contoso",
-      "allowedRoles": ["administrator", "customers_contoso"]
-    },
-    {
-      "route": "/logout",
-      "redirect": "/.auth/logout"
-    },
-    {
-      "route": "/calendar/*",
-      "rewrite": "/calendar.html"
-    },
-    {
-      "route": "/specials",
-      "redirect": "/deals",
-      "statusCode": 301
+      "route": "/",
+      "allowedRoles": [ "authenticated" ]
     }
   ],
-  "navigationFallback": {
-    "rewrite": "index.html",
-    "exclude": ["/images/*.{png,jpg,gif}", "/css/*"]
-  },
-  "globalHeaders": {
-    "content-security-policy": "default-src https: 'unsafe-eval' 'unsafe-inline'; object-src 'none'"
-  },
-  "mimeTypes": {
-    ".json": "text/json"
-  },
   "responseOverrides": {
     "401": {
         "redirect": "/.auth/login/aad",
