--- a/app/staticwebapp.config - Copy (2).json
+++ b/app/staticwebapp.config - Copy (2).json
@@ -5,6 +5,12 @@
       "allowedRoles": [ "authenticated" ]
     }
   ],
+  "responseOverrides": {
+    "401": {
+        "redirect": "/.auth/login/aad",
+        "statusCode": 302
+	}
+  },
   "auth": {
     "identityProviders": {
       "azureActiveDirectory": {
