test without auth

--- a/app/staticwebapp.config.json
+++ b/app/staticwebapp.config.json
@@ -2,7 +2,7 @@
   "routes": [
     {
       "route": "/",
-      "allowedRoles": [ "anonymous, authenticated" ]
+      "allowedRoles": [ "anonymous"]
     }
   ]
 }
