--- a/app/staticwebapp.config.builtinauth.json
+++ b/app/staticwebapp.config.builtinauth.json
@@ -37,6 +37,14 @@
       "allowedRoles": ["administrator", "customers_contoso"]
     },
     {
+      "route": "/login",
+      "rewrite": "/.auth/login/google"
+    },
+    {
+      "route": "/.auth/login/twitter",
+      "statusCode": 404
+    },
+    {
       "route": "/logout",
       "redirect": "/.auth/logout"
     },
@@ -54,28 +62,25 @@
     "rewrite": "index.html",
     "exclude": ["/images/*.{png,jpg,gif}", "/css/*"]
   },
+  "responseOverrides": {
+    "400": {
+      "rewrite": "/invalid-invitation-error.html"
+    },
+    "401": {
+      "redirect": "/login",
+      "statusCode": 302
+    },
+    "403": {
+      "rewrite": "/custom-forbidden-page.html"
+    },
+    "404": {
+      "rewrite": "/404.html"
+    }
+  },
   "globalHeaders": {
     "content-security-policy": "default-src https: 'unsafe-eval' 'unsafe-inline'; object-src 'none'"
   },
   "mimeTypes": {
     ".json": "text/json"
-  },
-  "responseOverrides": {
-    "401": {
-        "redirect": "/.auth/login/aad",
-        "statusCode": 302
-	}
-  },
-  "auth": {
-    "identityProviders": {
-      "azureActiveDirectory": {
-        "registration": {
-          "openIdIssuer": "https://login.microsoftonline.com/72f988bf-86f1-41af-91ab-2d7cd011db47",
-		  "clientIdSettingName": "AAD_CLIENT_ID",
-		  "clientSecretSettingName": "AAD_CLIENT_SECRET"
-		},
-	    "userDetailsClaim": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name"
-	  }
-	}
   }
 }
