--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ steps:
   - task: AzureStaticWebApp@0
     inputs:
       app_location: "/app"
-      api_location: "/api"
+      api_location: "/api" # Api source code path, applicable only if using Managed Functions. If using Bring Your Own Functions, remove or rename the api folder if present.
       output_location: "dist/angular-app"
     env:
       azure_static_web_apps_api_token: $(deployment_token)
